# pathbranching

./: CAPABILITIES_GUIDE.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
scripts/: demo-worldnotion-bridge.mjs  run-tauri-build.mjs  verify-action-persistence.mjs  verify-core.mjs  verify-dialogue-nodes.mjs  verify-event-script-sections.mjs  verify-evpath-format.mjs  verify-inspector-tabs.mjs  verify-story-outline.mjs  verify-subcanvas-routing.mjs  verify-unified-logic.mjs  verify-workspace-persistence.mjs  verify-worldnotion-yaml-import.mjs
src/: App.tsx  app.css  appTypes.ts  canonWorkingCopy.ts  documentController.ts  domain.ts  eventDraft.ts  eventScriptModel.ts  evpathFormat.ts  explorerSchema.ts  exportFormats.ts  exportPreview.ts  exportRuntime.ts  index.ts  logic.ts  narrativeNaming.ts  pathBranchingWorkspace.ts  projectMutations.ts  projectPersistence.ts  projectSerialization.ts  speakerRoles.ts  storyOutlineModel.ts  storySelection.ts  suiteChrome.ts  twineFormat.ts  validate.ts  workspaceSettings.ts  worldnotionBridge.ts  worldnotionVariants.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/canvas/: storyCanvasModel.ts
src/components/: AssetsPanel.tsx  ConnectPanel.tsx  DataDrawer.tsx  EditableCanvasEdge.tsx  EventScriptWorkspace.tsx  ExplorerPanel.tsx  ExportPanel.tsx  InteractionTutorial.tsx  LogicComposer.tsx  LogicPanel.tsx  MarkdownEditorDock.tsx  ReferencePicker.tsx  SpeakerSelector.tsx  StoryNode.tsx  Topbar.tsx  UniverseIconFrame.tsx  WorkspaceSidePanel.tsx
(+1 files in other folders)
