[package]
name = "everend-pathbranching"
version = "0.1.1"
description = "Pathbranching desktop authoring app."
authors = ["Everend Forge"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "everend_pathbranching_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
